--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world 2019221022 문종원
+<!doctype html>
+<html>
+    <head>
+        <title>index.html</title>
+        <meta charset="utf-8">
+        <meta name="author" content="문종원">
+    </head>
+    <body>
+        <a href="training.html">2주차 - HTML기초 - training.html</a>
+        <br>
+        <a href="html_part1.html">2주차 - HTML기초 - html_part1.html</a>
+    </body>
+</html>
