--- a/training.html
+++ b/training.html
@@ -92,5 +92,9 @@
         <br><br>
 
         <a href="index.html">돌아오기</a>
+
+        <!-- 절대주소, 상대주소 -->
+        <img src="./images/image001.jpg" alt="">
+        <img src="images/image001.jpg" alt="">
     </body>
 </html>
