--- a/training.html
+++ b/training.html
@@ -3,12 +3,48 @@
     <head>
         <title>HTML 연습</title>
         <meta charset="utf-8">
+        <style>
+        h1 {margin-left: 0px;}
+        h2 {margin-left: 40px;}
+        h3 {margin-left: 80px;}
+        h2 {
+            color: black;
+        }
+        /* 인라인형 태그를 작성하면 다른 태그들은 무시하고 중요도가 높은 인라인형 태그를 따른다 */
+
+        h1 {
+            color: red;
+            font-size: 20px;
+            margin-left: 500px;
+            text-align: center;
+        }
+
+        /* embed */
+        * {
+            font-weight: bold;
+            /* '*'는 '모두 다'라는 뜻. 전체선택자. css 초기화에 사용 */
+        }
+        li {
+            color: blue;
+            /* 모든 li 태그들의 글자가 파란색으로 변경됨 */
+        }
+        .class_name{
+            color: green;
+        }
+        #id_name{
+            color: pink;
+        }
+        /* '.'을 적는 것은 '이건 태그가 아니라 클래스 선택자의 네임이에요'라는 의미 */
+        /* id 선택자는 '.'이 아닌 '#'을 붙여야 함 */
+        </style>
+        <link rel="stylesheet" type="text/css" href="default.css">
     </head>
+
     <body>
         <!-- h1~h6 연습, 순번X, 깊이 표현 -->
         <h1>대한민국</h1>
         <p>아시아에서 가운데 있는</p>
-        <h2>서울</h2>
+        <h2 style="color: violet">서울</h2>
         <h3>서대문구</h3>
         <h3>은평구</h3>
         <h3>마포구</h3>
@@ -39,8 +75,9 @@
         <!-- unordered list- 비순차적 목록 -->
         <!-- 순서가 상관 없는 목록이라면 사용 -->
         <ul>
-            <li>설탕 100g</li>
-            <li>소금 100g</li>
+            <li class="class_name">설탕 100g</li>
+            <li id="id_name">소금 100g</li>
+            <!-- 이름 짓는 방법 : class, id - 전체가 아닌 한 두개만 바꾸고 싶을 때 이름을 지어서 그 이름을 가진 태그만 변경시킴 -->
             <li>물 100ml</li>
         </ul>
         <!-- ordered list- 순차적 목록 -->
@@ -97,5 +134,51 @@
         <!-- 절대주소, 상대주소 -->
         <img src="./images/image001.jpg" alt="">
         <img src="images/image001.jpg" alt="">
+
+        <br>
+        <!-- table 도표 -->
+        <!-- table, tr(한 행), td(한 칸) -->
+        <!-- colspan 열 확장, rowspan 행 확장 -->
+        <style>
+            table, tr, td {border:solid 1px black}
+        </style>
+        <!-- summary, caption : 도표의 내용을 미리 알려주도록 작성하는 태그. caption은 눈에 직접적으로 보임 -->
+        <table summary="요약 내용">
+            <caption>[표1] 표제목</caption>
+            <!-- thead, tbody, tfoot : 의미 강화를 위한 마크업(표에서 어디가 제목, 바디, 풋인지) -->
+            <thead>
+                <tr>
+                    <th>제목1</th>
+                    <th>제목2</th>
+                    <th>제목3</th>
+                    <th>제목4</th>
+                    <th>제목5</th>
+                </tr>
+            </thead>
+            <tr>
+                <td colspan="2">1</td>
+                <td colspan="2">2</td>
+                <!-- 칸을 확장하면 무조건 오른쪽으로 밀려나감 -->
+                <td>3</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+            </tr>
+        </table>
+
+        <br>
+        <!-- div (블록형)공간분할, span (인라인형)공간분할 -->
+        <!-- 의미없이 쓰기 좋은 태그 -->
+        <!-- 블록형 태그(ul, ol, dl 등)들은 자기 자리를 완전히 차지하고, 다른 태그가 못오게 밀어냄-->
+        <!-- 인라인 형태의 태그들은 공간이 좁아지면 자동으로 줄내림이 되고, 늘리면 빈공간을 채움(늘어남) -->
+        <div>블록형</div>
+        <span>인라인형</span>
+
+
+
     </body>
 </html>
