--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="문종원">
     </head>
     <body>
-        <a href="training.html">2주차 - HTML기초 - training.html</a>
+        <a href="training.html">3주차 - HTML완료 - training.html</a>
         <br>
         <a href="html_part1.html">2주차 - HTML기초 - html_part1.html</a>
     </body>
