--- a/training.html
+++ b/training.html
@@ -28,16 +28,21 @@
             color: blue;
             /* 모든 li 태그들의 글자가 파란색으로 변경됨 */
         }
+        /* class명은 여러 번 사용할 수 있기 때문에 여러가지 요소들을 한꺼번에 선택하여 스타일을 지정할때 사용 */
+        /* '.'을 적는 것은 '이건 태그가 아니라 클래스 선택자의 네임이에요'라는 의미 */
         .class_name{
             color: green;
         }
+        /* 특정 id값을 가지고 있는 유일한 요소에 접근하여 스타일을 지정할 때는 id선택자 형식을 사용 */
+        /* id 선택자는 '.'이 아닌 '#'을 붙여야 함 */
         #id_name{
             color: pink;
         }
-        /* '.'을 적는 것은 '이건 태그가 아니라 클래스 선택자의 네임이에요'라는 의미 */
-        /* id 선택자는 '.'이 아닌 '#'을 붙여야 함 */
+        
         </style>
         <link rel="stylesheet" type="text/css" href="default.css">
+        <!-- external -->
+
     </head>
 
     <body>
