Revert "Revert "4주차""
This reverts commit 9f81882e0d1770f04bff103abb0a20f2e97e29b7.

--- a/training.html
+++ b/training.html
@@ -160,19 +160,21 @@
                     <th>제목5</th>
                 </tr>
             </thead>
-            <tr>
-                <td colspan="2">1</td>
-                <td colspan="2">2</td>
-                <!-- 칸을 확장하면 무조건 오른쪽으로 밀려나감 -->
-                <td>3</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-            </tr>
+            <tbody>
+                <tr>
+                    <td colspan="2">1</td>
+                    <td rowspan="2">2</td>
+                    <!-- 칸을 확장하면 무조건 오른쪽으로 밀려나감 -->
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>8</td>
+                </tr>
+            </tbody>
         </table>
 
         <br>
