--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <meta name="author" content="문종원">
     </head>
     <body>
-        <a href="training.html">3주차 - HTML완료 - training.html</a>
+        <a href="training.html">3주차 - traning.html / 수정 완료</a>
         <br>
-        <a href="html_part1.html">2주차 - HTML기초 - html_part1.html</a>
+        <a href="html5.html">4주차 - html5.html</a>
+        <br>
+        <a href="css.html">4주차 - css.html</a>
     </body>
 </html>
