--- a/css.html
+++ b/css.html
@@ -33,6 +33,9 @@
             /* 자식 선택자 : div의 자식(child) li */
             /* 직속 부모, 자식 관계이어야 하기 때문에 자식선택자는 관계를 명확하게 구별해주어야 함. */
 
+            div,ul,li{ font-weight: bold; }
+            /* 선택자 조합 : div와 ul과 li */
+
         </style>
     </head>
 
@@ -62,6 +65,8 @@
                 <li>리스트4</li>
             </ul>
         </div>
+
+
 
         <br>
         <br>
