--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <a href="training.html">3주차 - traning.html / 수정 완료</a>
+
         <br>
-        <a href="html5.html">4주차 - html5.html</a>
+        <a href="css.html">5주차 - css.html</a>
+
         <br>
-        <a href="css.html">4주차 - css.html</a>
+        <a href="layout1.html">5주차 - layout1.html</a>
     </body>
 </html>
