--- a/layout1.html
+++ b/layout1.html
@@ -38,7 +38,7 @@
                     <h3>Web Design</h3>
                     <div>
                         <!-- 그림, 제목, 내용(글) -->
-                        <img src="images/layout1_head_logo.jpg"/>
+                        <img src="images/layout1_img1.jpg"/>
                         <dl>
                             <dt>Lorem ipsum dolor sit amet</dt>
                             <dd>
