--- a/layout1.html
+++ b/layout1.html
@@ -55,6 +55,11 @@
             </div>
             <footer></footer>
         </div>
+
+        <br>
+        <br>
+        <a href="index.html">돌아가기</a>
+
     </body>
 </html>
     
