--- a/css.html
+++ b/css.html
@@ -181,7 +181,7 @@
 
         <br>
         <br>
-        <a href="index.html">돌아오기</a>
+        <a href="index.html">돌아가기</a>
         
     </body>
 </html>
