--- a/layout1.html
+++ b/layout1.html
@@ -153,7 +153,7 @@
                 </section>
                 <section>
                     <div>
-                        <h3>Web Design</h3>
+                        <h3>Icons</h3>
                         <div class="part">
                             <img src="images/layout1_img3.jpg"/>
                             <dl>
@@ -181,7 +181,7 @@
                 </section>
                 <section>
                     <div>
-                        <h3>Web Design</h3>
+                        <h3>illustrations</h3>
                         <div class="part">
                             <img src="images/layout1_img5.jpg"/>
                             <dl>
@@ -209,7 +209,7 @@
                 </section>
                 <section>
                     <div>
-                        <h3>Web Design</h3>
+                        <h3>Miscellaneous</h3>
                         <div class="part">
                             <img src="images/layout1_img7.jpg"/>
                             <dl>
