--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     </head>
     <body>
         <a href="layout1.html">7주차 - layout1.html</a>
+        <br>
+        <a href="layout2.html">7주차 - layout2.html</a>
     </body>
 </html>
