--- a/layout1.html
+++ b/layout1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>레이아웃1</title>
+        <title>layout1</title>
         <meta charset="utf-8">
         <style>
             header,div,nav,ul,li,footer{
