--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="author" content="문종원">
     </head>
     <body>
-        <a href="layout2.html">10주차 - layout2.html</a>
+        <a href="layout3.html">11주차 - layout3.html</a>
         <br>
-        <a href="layout3.html">10주차 - layout3.html</a>
+        <a href="masonry.html">11주차 - masonry.html</a>
     </body>
 </html>
