--- a/layout3.html
+++ b/layout3.html
@@ -3,11 +3,98 @@
     <head>
         <title>layout3</title>
         <meta charset="utf-8">
+        <style>
+            body{
+                background-image: url("images/Layout3_back.jpg");
+            }
+            header li{
+                float: left;
+                list-style: none;
+                padding: 0px 15px; /* 상하 좌우 */
+                padding: 0px 30px 0px 0px; /* 상 우 하 좌 */
+            }
+            header ul{
+                padding: 0px;
+                margin: 5px 0px; /* 상하 좌우 */
+            }
+            .clear{
+                clear: both;
+                height: 0px;
+                overflow: hidden;
+            }
+            .short_line{
+                width: 30px;
+                height: 0px;
+                border-bottom: solid 1px gray;
+                margin: 5px 0px; /* 상하 좌우 */
+            }
+            .long_line{
+                width: 90px;
+                height: 0px;
+                border-bottom: solid 1px gray;
+            }
+            .image_part>div{
+                background-color: black;
+                color: white;
+                display: inline-block; /* DIV는 블록형 태그 */
+                padding: 5px;
+
+                position: static; /* 서로 밀고 당기는 방식*/
+                position: absolute; /* 절대적인 */
+                bottom: 0px;
+                left: 0px;
+            }
+            .image_part{
+                position: relative; /* 관계형 */
+                /* relative로 설정하면 자식 .image_part>div의 position: absolute;의 기준이 됨 */
+            }
+            .image_part img{
+                /* 본래 inline인데 밑공간이 생겨서 block으로 변경 */
+                display: block;
+            }
+            .card{
+                width: 310px;
+                background-color: white;
+                border-right: solid 2px #ddd;
+                border-bottom: solid 2px #ddd;
+                margin: 0px 40px 40px 0px; /* 상 우 하 좌 */
+                /* 20px+310px+2px+20px = 실제 가로사이즈 */
+                float: left;
+            }
+            .card>h2{
+                margin: 0px;
+            }
+            .date{
+                margin: 8px 0px;
+            }
+            .info_part h2{
+                font-size: 20px;
+            }
+            .info_part{
+                font-size: 5px;
+                margin: 30px;
+            }
+            footer img{
+                margin-left: 3px;
+            }
+
+            .font_bold{
+                font-weight: bold;
+            }
+            footer div{
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+            #wrap{
+                padding: 100px;
+            }
+        </style>
     </head>
     <body>
         <div id="wrap">
             <header>
                 <h1>Gridly</h1>
+                <div class="short_line"></div>
                 <nav>
                     <ul>
                         <li>home</li>
@@ -16,6 +103,7 @@
                         <li>branding/identity</li>
                         <li>about me</li>
                         <li>contact</li>
+                        <div class="clear"></div>
                     </ul>
                 </nav>
             </header>
@@ -27,12 +115,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -43,12 +133,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -59,12 +151,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -75,12 +169,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -91,12 +187,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -107,12 +205,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -123,12 +223,14 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
@@ -139,17 +241,85 @@
                 </div>
                 <div class="info_part">
                     <h2>Dulux Colour Awards</h2>
-                    <div>12th October 2011</div>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
                     <p>
                             A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
                             A collection of posters showing the famous colours of history, 
                             advertises you add your own colours to history.
                     </p>
+                    <div class="long_line"></div>
                     <div>Read On →</div>
                     </div>
                 </div>
+                <div class="card">
+                <div class="image_part">
+                <img src="images/layout3_img9.jpg">
+                <div>Photoshop</div>
+                </div>
+                <div class="info_part">
+                    <h2>Dulux Colour Awards</h2>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
+                    <p>
+                            A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
+                            A collection of posters showing the famous colours of history, 
+                            advertises you add your own colours to history.
+                    </p>
+                    <div class="long_line"></div>
+                    <div>Read On →</div>
+                    </div>
+                </div>        
+                <div class="card">
+                <div class="image_part">
+                <img src="images/layout3_img10.jpg">
+                <div>Photoshop</div>
+                </div>
+                <div class="info_part">
+                    <h2>Dulux Colour Awards</h2>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
+                    <p>
+                            A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
+                            A collection of posters showing the famous colours of history, 
+                            advertises you add your own colours to history.
+                    </p>
+                    <div class="long_line"></div>
+                    <div>Read On →</div>
+                    </div>
+                </div>        
+            <div class="card">
+                <div class="image_part">
+                <img src="images/layout3_img11.jpg">
+                <div>Photoshop</div>
+                </div>
+                <div class="info_part">
+                    <h2>Dulux Colour Awards</h2>
+                    <div class="date">12th October 2011</div>
+                    <div class="long_line"></div>
+                    <p>
+                            A direct mail kit that announces the Dulux Colour Awards Competition has commenced. 
+                            A collection of posters showing the famous colours of history, 
+                            advertises you add your own colours to history.
+                    </p>
+                    <div class="long_line"></div>
+                    <div>Read On →</div>
+                    </div>
+                </div>        
+                <div class="clear"></div>          
             </div>
-            <footer>footer</footer>
+            <footer>
+                <div class="short_line"></div>    
+                <img src="images/layout3_icon1.png">
+                <img src="images/layout3_icon2.png">
+                <img src="images/layout3_icon3.png">
+                <img src="images/layout3_icon4.png">
+                <div class="short_line"></div>
+                <div class="font_bold">
+                <div>This website & the Internet Ends hereg</div>
+                <div>Copyright 2011 Showcase Design www.BlazRobar.com</div>
+                </div>
+            </footer>
         </div>
 
         <br>
