--- a/Masonry/masonry.html
+++ b/Masonry/masonry.html
@@ -36,6 +36,7 @@
 	</script>
 </head>
 <body>
+	<a href="../index.html"></a>
 	<div class="grid">
 	  <div class="grid-item">
 	  	<img src="layout3_img1.jpg" />
@@ -73,10 +74,6 @@
 	  </div>
 	</div>
 
-	<br>
-	<br>
-	<hr>
-	<a href="index.html">돌아가기</a> 
 
 </body>
 </html>
