--- a/Masonry/masonry.html
+++ b/Masonry/masonry.html
@@ -36,7 +36,7 @@
 	</script>
 </head>
 <body>
-	<a href="../index.html"></a>
+	<a href="./index.html"></a>
 	<div class="grid">
 	  <div class="grid-item">
 	  	<img src="layout3_img1.jpg" />
