--- a/Masonry/masonry.html
+++ b/Masonry/masonry.html
@@ -36,7 +36,6 @@
 	</script>
 </head>
 <body>
-	<a href="../index.html"></a>
 	<div class="grid">
 	  <div class="grid-item">
 	  	<img src="layout3_img1.jpg" />
@@ -74,6 +73,10 @@
 	  </div>
 	</div>
 
-
+    <br>
+    <br>
+    <hr>
+    <a href="../index.html"></a>
+test
 </body>
 </html>
