--- a/Masonry/masonry.html
+++ b/Masonry/masonry.html
@@ -14,7 +14,7 @@
 		}
 		.grid-item--width2 { 
 			width: 400px; /* 두칸짜리 */
-			}
+		}
 		img{
 			width:100%;
 			display: block;
@@ -27,12 +27,12 @@
 			// 문서, 준비되면{}
 			$('.grid').masonry({
 				// .grid masonry 기능 시작
-				// option
+				// options
 				itemSelector: '.grid-item',
 				columnWidth: 200 /* 한 칸의 넓이 */
 			});
 		});
-		// 기능 사작하긴
+		// 기능 사작하기
 	</script>
 </head>
 <body>
@@ -41,7 +41,7 @@
 	  	<img src="layout3_img1.jpg" />
 	  </div>
 	  <div class="grid-item grid-item--width2">
-		<!-- 띄어쓰기를 이용하여 두 가지 클래스명을 지정함. -->
+		  <!-- 띄어쓰기를 이용하여 두 가지 클래스명을 지정함. -->
 	  	<img src="layout3_img2.jpg" />
 	  </div>
 	  <div class="grid-item">
@@ -73,9 +73,11 @@
 	  </div>
 	</div>
 
+
     <br>
     <br>
     <hr>
-    <a href="../index.html"></a>
+	<a href="../index.html"></a>
+	
 </body>
 </html>
