--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <a href="layout3.html">11주차 - layout3.html</a>
         <br>
-        <a href="/Masonry/masonry.html">11주차 - masonry.html</a>
+        <a href="masonry.html">11주차 - masonry.html</a>
     </body>
 </html>
