--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="문종원">
     </head>
     <body>
-        <a href="layout3.html">11주차 - layout3.html / moon</a>
+        <a href="layout3.html">11주차 - layout3.html</a>
         <br>
         <a href="/Masonry/masonry.html">11주차 - masonry.html</a>
     </body>
