--- a/Masonry/masonry.html
+++ b/Masonry/masonry.html
@@ -70,5 +70,10 @@
 	  	<img src="layout3_img11.jpg" />
 	  </div>
 	</div>
+
+	<br>
+	<br>
+	<hr>
+	<a href="../index.html">돌아가기</a>
 </body>
 </html>
