--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
         <a href="layout3.html">11주차 - layout3.html</a>
         <br>
         <a href="Masonry/masonry.html">11주차 - masonry.html</a>
+        <br>
+        <img src="images/masonry_2019221022.png">
+        <br>
+        <h2>저번 수업시간때 깃허브 연동에 문제가 있었는데,<br>
+            아직 해결되지 않았습니다. 저번 수업시간때 진행한 그대로<br>
+            작성했는데도 연동이 안되서 따로 캡쳐본 올립니다.
+        </h2>
     </body>
 </html>
