--- a/layout1.html
+++ b/layout1.html
@@ -133,6 +133,10 @@
                 margin-right: auto;
                 /* 양쪽여백 자동 = 가운데 정렬 */
             }
+
+            a{
+                font-size: 30px;
+            }
         </style>
     </head>
     <body>
@@ -317,7 +321,7 @@
         <br>
         <br>
         <hr>
-        <a href="index.html">돌아가기</a>
+        <a href="index_moon.html">돌아가기</a>
 
     </body>
 </html>
