--- a/layout3.html
+++ b/layout3.html
@@ -88,6 +88,11 @@
             #wrap{
                 padding: 100px;
             }
+
+            
+            a{
+                font-size: 30px;
+            }
         </style>
     </head>
     <body>
@@ -325,7 +330,7 @@
         <br>
         <br>
         <hr>
-        <a href="index.html">돌아가기</a> 
+        <a href="index_moon.html">돌아가기</a> 
 
         
     </body>
