--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,7 @@
             .image_part>div{
                 background-color: #cf7b75;
                 font-weight: bold;
+                font-size: 12px;
                 color: black;
                 display: inline-block;
                 padding: 5px;
@@ -83,8 +84,8 @@
                 margin: 0px 40px 40px 0px; 
                 float: left;
             }
-            .card>h2{
-                margin: 0px;
+            h3{
+                font-size: 15px;
             }
             .date{
                 margin: 8px 0px;
@@ -207,7 +208,7 @@
                         <div class="date">November 2019</div>
                         <div class="long_line"></div>
                         <p>
-                                시그니쳐 캐릭터인 '하트뚠뚠'이로 조각상을 만들었습니다.<br>
+                                시그니쳐 캐릭터인 '하트뚠뚠'으로 조각상을 만들었습니다.<br>
                                 3D Maxs를 기반으로 작업을 했고,<br> 
                                 질감 연출과 조명 연출을 통해 자연스러운 느낌을 주었습니다.
                         </p>
@@ -295,7 +296,7 @@
                     <div>Album cover Design</div>
                     </div>
                     <div class="info_part">
-                        <h3>Cloud album cover</h3>
+                        <h3>'Rad Museum - Cloud'<br>album cover</h3>
                         <div class="date">November 2019</div>
                         <div class="long_line"></div>
                         <p>
@@ -314,7 +315,7 @@
                         <div>Album cover Design</div>
                         </div>
                         <div class="info_part">
-                            <h3>Cloud album cover</h3>
+                            <h3>'Rad Museum - Cloud'<br>album cover</h3>
                             <div class="date">November 2019</div>
                             <div class="long_line"></div>
                             <p>
@@ -333,7 +334,7 @@
                         <div>Album cover Design</div>
                         </div>
                         <div class="info_part">
-                            <h3>Cloud album cover</h3>
+                            <h3>'Rad Museum - Cloud'<br>album cover</h3>
                             <div class="date">November 2019</div>
                             <div class="long_line"></div>
                             <p>
@@ -352,7 +353,7 @@
                         <div>Album cover Design</div>
                         </div>
                         <div class="info_part">
-                            <h3>Cloud album cover</h3>
+                            <h3>'Rad Museum - Cloud'<br>album cover</h3>
                             <div class="date">November 2019</div>
                             <div class="long_line"></div>
                             <p>
